[gd_scene load_steps=3 format=3 uid="uid://k1v0qvtqkp44"]

[ext_resource type="Script" path="res://Prog115a.gd" id="1_7b0rb"]

[sub_resource type="Theme" id="Theme_bj6xi"]
default_font_size = 30

[node name="Prog115a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7b0rb")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 468.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 506.0
offset_right = 231.0
offset_bottom = 605.0
theme = SubResource("Theme_bj6xi")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 450.0
offset_top = 512.0
offset_right = 653.0
offset_bottom = 611.0
theme = SubResource("Theme_bj6xi")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 810.0
offset_top = 514.0
offset_right = 1013.0
offset_bottom = 613.0
theme = SubResource("Theme_bj6xi")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
